[tool.poetry]
name = "cybergear"
version = "0.1.0"
description = ""
authors = ["Dz <MathBeWithCode@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
python-can = "^4.5.0"
ipykernel = "^6.29.5"
pyserial = "^3.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
